--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,12 @@ source-code: https://github.com/annhanlon/collectionbuilder
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Aran Islands Test Site 
+title: Hanlon Test Site 
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: a test site for digital collections
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "Demo collection based on DHSI workshop. Images are from Wikimedia Commons."
+description: "Demo collection based on DHSI workshop. Summer 2021."
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Ann Hanlon
 
